Add delete button for upload file and file URL in form (create, update)

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>TO-DO test</title>
+    <title>TO-DO</title>
   </head>
   <body>
     <div id="root"></div>
